// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-request-helper Renders \`c-request-helper\` after successful request 1`] = `
<c-runtime-template-stub
  template="<div class=\\"all-inherit\\"><div>{\\"data\\":\\"test\\"}</div></div>"
/>
`;

exports[`c-request-helper Renders \`c-request-helper\` with default props 1`] = `
<c-runtime-template-stub
  template=""
/>
`;
